Added an EventEmitter base class, and made the RAM class use it.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 		background-color: #A8DC36;
 	}
 	</style>
+	<script type="text/javascript" src="eventemitter.js"></script>
+
 	<script type="text/javascript" src="clock.js"></script>
 
 	<script type="text/javascript" src="bus.js"></script>
