--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	}
 	.box > h3:first-child {
 		padding: 2px;
-		margin: 0 0 2px 0;
+		margin: 0;
 		border-bottom: 1px solid black;
 		text-align: center;
 		background: #E0E0E0;
@@ -24,6 +24,12 @@
 	}
 	.error {
 		background-color: #FFC0C0;
+	}
+	.screen {
+		float: left;
+		width: 50%;
+		/* Because the subpixel rounding causes it to be visible sometimes: */
+		background: #000000;
 	}
 	.system-controls {
 		float: right;
@@ -36,8 +42,7 @@
 	.screen-table {
 		table-layout: fixed;
 		border-collapse: collapse;
-		border: 1px solid black;
-		width: 50%;
+		width: 100%;
 	}
 	/* This (and the table-layout) is here to make the cells be squares. */
 	.screen-table td::before {
@@ -45,7 +50,7 @@
 		display: block;
 		padding-top: 100%;
 	}
-	.screen-table tbody, .screen-table tr, .screen-table td {
+	.screen-table, .screen-table * {
 		border: none;
 	}
 	.color-0 {
@@ -91,13 +96,15 @@
 	<script type="text/javascript" src="renderer/systemcontrols.js"></script>
 </head>
 <body>
+	<div class="box screen">
+		<h3>Screen</h3>
+		<table id="screen-table"></table>
+	</div>
 	<div class="box system-controls">
 		<h3>System</h3>
 		<div id="system-controls">
 		</div>
 	</div>
-	<table id="screen-table">
-	</table>
 	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
