--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 	<link rel="stylesheet" href="css/core.css">
 	<link rel="stylesheet" href="css/screen.css">
+	<link rel="stylesheet" href="css/memory.css">
 	<link rel="stylesheet" href="css/index.css">
 
+	<script type="text/javascript" src="util.js"></script>
 	<script type="text/javascript" src="eventemitter.js"></script>
 
 	<script type="text/javascript" src="clock.js"></script>
@@ -38,6 +40,8 @@
 
 	<script type="text/javascript" src="renderer/tablescreenrenderer.js"></script>
 	<script type="text/javascript" src="renderer/systemcontrols.js"></script>
+	<script type="text/javascript" src="renderer/memoryrenderer.js"></script>
+	<script type="text/javascript" src="renderer/mainmemoryrenderer.js"></script>
 </head>
 <body>
 	<div class="box screen">
@@ -48,6 +52,12 @@
 		<h3>System</h3>
 		<div id="system-controls">
 		</div>
+	</div>
+	<div class="box main-memory" id="main-memory">
+		<h3>Main memory</h3>
+	</div>
+	<div class="box registers" id="registers">
+		<h3>Registers</h3>
 	</div>
 	<script type="text/javascript" src="index.js"></script>
 </body>
