Added a set of Range classes and made the RAM class use one.
This is a step on the way to adding flexibility and fixing some bugs.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<script type="text/javascript" src="util.js"></script>
 	<script type="text/javascript" src="eventemitter.js"></script>
 
+	<script type="text/javascript" src="range/range.js"></script>
+	<script type="text/javascript" src="range/throwingrange.js"></script>
+
 	<script type="text/javascript" src="ui/uimanager.js"></script>
 
 	<script type="text/javascript" src="clock.js"></script>
