Replaced the MemoryBus class with a new DelegatingMemory class.
This also removes the no longer used MainMemoryRenderer class.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 	<script type="text/javascript" src="clock.js"></script>
 
 	<script type="text/javascript" src="bus.js"></script>
-	<script type="text/javascript" src="memorybus.js"></script>
 	<script type="text/javascript" src="devicebus.js"></script>
 
 	<script type="text/javascript" src="memory/singlewordmemory.js"></script>
+	<script type="text/javascript" src="memory/delegatingmemory.js"></script>
 
 	<script type="text/javascript" src="devices/ram.js"></script>
 	<script type="text/javascript" src="devices/drive.js"></script>
@@ -57,7 +57,6 @@
 	<script type="text/javascript" src="renderer/tablescreenrenderer.js"></script>
 	<script type="text/javascript" src="renderer/systemcontrols.js"></script>
 	<script type="text/javascript" src="renderer/memoryrenderer.js"></script>
-	<script type="text/javascript" src="renderer/mainmemoryrenderer.js"></script>
 </head>
 <body>
 	<div class="box screen">
