Replaced the DeviceBus class with a simpler ArrayDeviceBus class.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
 
 	<script type="text/javascript" src="clock.js"></script>
 
-	<script type="text/javascript" src="bus.js"></script>
-	<script type="text/javascript" src="devicebus.js"></script>
-
 	<script type="text/javascript" src="memory/singlewordmemory.js"></script>
 	<script type="text/javascript" src="memory/delegatingmemory.js"></script>
 
 	<script type="text/javascript" src="devices/ram.js"></script>
+	<script type="text/javascript" src="devices/arraydevicebus.js"></script>
 	<script type="text/javascript" src="devices/drive.js"></script>
 	<script type="text/javascript" src="devices/screen.js"></script>
 
