Renamed the RAM class to ArrayMemory and refactored its API.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 	<script type="text/javascript" src="memory/singlewordmemory.js"></script>
 	<script type="text/javascript" src="memory/delegatingmemory.js"></script>
+	<script type="text/javascript" src="memory/arraymemory.js"></script>
 
-	<script type="text/javascript" src="devices/ram.js"></script>
 	<script type="text/javascript" src="devices/arraydevicebus.js"></script>
 	<script type="text/javascript" src="devices/drive.js"></script>
 	<script type="text/javascript" src="devices/screen.js"></script>
